# sdvx_eac_archipelago

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  ap_config.md  archipelago.ini.example  build.bat  build_deploy.bat  deploy_apworld.bat
.github/workflows/: ci.yml  release.yml
MinHook/src/hde/: pstdint.h
_examples_references/input_shim/: sdvxio.dll.cab
ap_world/: sdvx_template.yaml
deploy/: archipelago.ini  generate-apworld.bat
deploy/ap_world/: __init__.py  sdvx_template.yaml
deploy/tools/: generate_song_data.py
src/: README.md  ap_client.cpp  ap_client.h  config.cpp  config.h  debug_ui.cpp  dllmain.cpp  exports.def  hooks.cpp  hooks.h  ipc.h  offsets.h
